fixed the navbar brand--it was sitting too close to the browser edge

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -22,3 +22,5 @@
   border-bottom: none
   background-color: white
 
+.navbar-brand
+  margin-left: 10px
